# monome-rack-metamodule

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  plugin-firmware.cpp  plugin-impl.cpp  plugin-mm.json  plugin-sim.cpp  plugin.cpp
.devcontainer/: Dockerfile  devcontainer.json
assets/: convert-assets.sh
cmake/: meadowphysics.cmake  teletype-codegen.sh  teletype.cmake
